fix: safari overflow in border radius

--- a/src/days/Day-035/index.css
+++ b/src/days/Day-035/index.css
@@ -62,6 +62,11 @@ body {
     border-radius: 100px 100px 0 0;
     border: 4px solid black;
     overflow: hidden;
+
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
 }
 
 .teeth-top,
@@ -71,10 +76,12 @@ body {
 
 .teeth-top > .tooth {
     border-top: none;
+    overflow: hidden;
 }
 
 .teeth-bottom > .tooth {
     border-bottom: none;
+    overflow: hidden;
 }
 
 .tooth {
